Fixed ugly content breaking on small monitor

--- a/themes/ftb_theme/css/style.css
+++ b/themes/ftb_theme/css/style.css
@@ -95,3 +95,10 @@ a:hover, a:active {
   font-weight: bolder;
   margin-bottom: 10px;
 }
+
+@media all and (max-width: 959px) {
+  .media-slider {
+    float:none;
+    padding: 0 34px 10px;
+  }
+}
